ari fixer improvements

--- a/fix_ari/fix ari.html
+++ b/fix_ari/fix ari.html
@@ -14,6 +14,8 @@
 				<button id="fix_button" onclick="fixAri()">extract links</button>
 			</div>
 			<h2>output</h2>
+			<div id="log">
+			</div>
 			<div id="results">
 				<h3>fixed locations</h3>
 				<output id="results_output">
@@ -45,6 +47,10 @@
 				<li>if you want to keep adding locations to your maps, use <a href="https://map-making.app">map-making.app</a> instead of the official mapmaker</li>
 			</ol>
 			<h2>updates</h2>
+			<details><summary><b>v2.2 (2022-03-03)</b></summary>
+				<ol><li>more improvements for larger maps - no more browser freezing (hopefully)</li></ol>
+				<ol><li>you can now see how many locations have been processed</li></ol>
+			</details>
 			<details><summary><b>v2.1 (2022-02-08)</b></summary>
 				<ol><li>improved handling of hidden coverage - it now selects the closest location instead of the default one</li></ol>
 			</details>
